完善接口及相关页面

--- a/views/index.html
+++ b/views/index.html
@@ -335,6 +335,12 @@
             text-align: center;
             float: none;
         }
+        
+        .namename {
+            font-size: 12px;
+            margin-top: 14px;
+            color: #a7a4a4;
+        }
     </style>
 </head>
 
@@ -357,6 +363,7 @@
     <script src="js/assert/mui.min.js"></script>
     <script src="js/assert/mui.imageViewer.js"></script>
     <script src="js/assert/socket-client.js"></script>
+    <script src="js/assert/axios.min.js"></script>
     <script src="js/chat.js"></script>
     <script>
         var o = new Chat();
