--- a/views/index.html
+++ b/views/index.html
@@ -145,7 +145,8 @@
         }
         
         .msg-item .msg-content .msg-content-inner {
-            overflow-x: hidden;
+            /*overflow-x: hidden;*/
+            word-wrap: break-word;
         }
         
         .msg-item .msg-content .msg-content-arrow {
@@ -354,7 +355,7 @@
     </div>
     <footer>
         <div class="footer-center">
-            <textarea id='msg-text' type="text" class='input-text'></textarea>
+            <input id='msg-text' type="text" class='input-text'>
         </div>
         <label for="" class="footer-right">
 			<i id='msg-type' class="mui-icon mui-icon-redo"></i>
