--- a/views/peer.html
+++ b/views/peer.html
@@ -33,7 +33,7 @@
             host: 'localhost',
             port: 9000,
             path: '/myapp',
-            debug: 3,
+            debug: 1,
             config: {
                 'iceServers': [{
                     url: 'stun:stun.l.google.com:19302'
@@ -43,41 +43,46 @@
         peer.on('open', function(id) {
             console.log(id);
         });
-        peer.on('connection', (c) => {
+        peer.on('connection', function(c) {
             console.log('显示连接的id' + c.peer);
-            connectedPeers[c.peer] = c;
-            console.log(connectedPeers);
+            // c.open = true;
+            // connectedPeers[c.peer] = c;
+            //反向连接
+            if (!connectedPeers[c.peer]) {
+                let coon = peer.connect(c.peer, {
+                    label: 'chat',
+                });
+                coon.on('open', function() {
+                    connectedPeers[coon.peer] = coon;
+                });
+                coon.on('error', function(err) {
+                    console.log(err);
+                });
+            }
+            //反向连接结束
             c.on('data', function(data) {
                 console.log('有信息来了')
                 oBox.innerHTML = oBox.innerHTML + '<br/>' + data;
             });
             c.on('close', function() {
-                alert(c.peer + ' 已断开.');
+                console.log(c.peer + ' 已断开.');
             });
 
 
         });
         peer.on('error', function(err) {
             console.log(err);
-        })
+        });
         oBtn.addEventListener('click', () => {
             let conn = peer.connect(oInput.value, {
                 label: 'chat',
             });
             conn.on('open', function() {
                 connectedPeers[conn] = conn;
-                // conn.on('data', function(data) {
-                //     console.log('对方有数据返回'); //无反应
-                //     oBox.innerHTML = oBox.innerHTML + data;
-                // });
-                // conn.on('close', function() {
-                //     alert(conn.peer + ' has left the chat.');
-                // });
-                // conn.send('你好'); //无反应
             });
 
             conn.on('error', function(err) {
-                alert(err);
+                console.log(err);
             });
         })
         oBtn1.addEventListener('click', function() {
