加入peer 并完善功能

--- a/views/index.html
+++ b/views/index.html
@@ -365,6 +365,7 @@
     <script src="js/assert/mui.imageViewer.js"></script>
     <script src="js/assert/socket-client.js"></script>
     <script src="js/assert/axios.min.js"></script>
+    <script src="js/assert/peer.js"></script>
     <script src="js/chat.js"></script>
     <script>
         var o = new Chat();
